# cpp-opengl

./: .gitignore  CMakeLists.txt  README.md
dependencies/glad/: glad.h
src/: glad.c  main.cpp
